Updated auth logic as well as added buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -338,6 +338,8 @@
                     <li><a href="#tournament-types">Tournament Types</a></li>
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="{{ url_for('auth.login') }}" class="btn btn-outline" style="background: transparent; border: 2px solid white; margin-left: 15px;">Login</a></li>
+                    <li><a href="{{ url_for('auth.register') }}" class="btn" style="background-color: var(--success); margin-left: 10px;">Sign Up</a></li>
                 </ul>
                 <a href="#signup" class="btn">Get Started</a>
             </nav>
